Application refactored to new name

--- a/base/templates/base/store.html
+++ b/base/templates/base/store.html
@@ -6,7 +6,7 @@
 	<style>
 		@keyframes cat {
 			0% {
-				background-image: url('/static/images/back.png/');
+				background-image: url('/static/images/back.png');
 			}
 
 			14% {
@@ -145,19 +145,21 @@
 
 
 	</div>
+
+	
 	<div style="background-color: whitesmoke;">
 		<hr>
-		<h4 style="font-weight: bolder;">OLISA CLOSET - NIGERIA'S NO. 1 ONLINE CLOTHING AND ACCESSORIES STORE.
+		<h4 style="font-weight: bolder;">{{company_name}} - WORLD NO. 1 ONLINE BEAUTY AND ACCESSORIES STORE.
 		</h4>
-		<h5 style="font-weight: bold;">GET ALL THE CLOTHING APPARRELS YOU WOULD EVER NEED AT OLISA CLOSET.</h5>
+		<h5 style="font-weight: bold;">GET ALL THE CLOTHING APPARRELS YOU WOULD EVER NEED AT {{company_name}}.</h5>
 		<p>
-			Olisa Closet is the largest online shopping website in Ikorodu, Lagos State, Nigeria. We offer
+			{{company_name}} is the largest online shoppin. We offer
 			customers
-			in Nigeria all they need in one clothing online store regradless of their location in the country.
+			worldwide all they need in one clothing online store regradless of their location in the country.
 			On our website website, you can shop from the comfort of
 			your home or during work breaks, make seamless payments and get everything delivered fast without
 			you having to stress or
-			move an inch. Whatever your lore is, we've got something for everyone at OLISA CLOSET.
+			move an inch. Whatever your lore is, we've got something for everyone at {{company_name}}.
 
 			<h6 style="font-weight: bold;" >Shop the Latest Fashion and Trendy Outfits Online
 			</h6>
@@ -168,7 +170,7 @@
 			browse through our unique fashion accessories like shoes, bags, jewelry, and sunglasses, all at
 			unbeatable prices you won't find anywhere else.
 
-			For men's fashion, Olisa Closet has an impressive collection of stylish clothing pieces that can make a
+			For men's fashion, {{company_name}} has an impressive collection of stylish clothing pieces that can make a
 			statement. Find quality men's trousers and shirts at the most affordable prices.
 		</p>
 	</div>
