--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,154 +1,173 @@
-body{
+body {
 	background-color: hsl(0, 0%, 98%);
 }
 
-h1,h2,h3,h4,h5,h6{
-	color:hsl(0, 0%, 30%);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: hsl(0, 0%, 30%);
 }
 
-.box-element{
-	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
+.box-element {
+	box-shadow: hsl(0, 0%, 80%) 0 0 16px;
 	border-radius: 4px;
 	padding: 10px;
 }
 
-.thumbnail{
+.thumbnail {
 	width: 50%;
 	height: 200px;
-	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
-    -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
-    box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+	-webkit-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
+	-moz-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
+	box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
 }
 
-.product{
+.product {
 	border-radius: 0 0 4px 4px;
 }
 
-.bg-dark{
-	background-color: #4f868c!important;
+.bg-dark {
+	background-color: #4f868c !important;
 }
 
-#cart-icon{
-	width:25px;
+#cart-icon {
+	width: 25px;
 	display: inline-flex;
-	position:absolute;
+	position: absolute;
 	z-index: 1;
 }
 
-.cart-total{
-	display: inline-flex;
-	text-align: center;
-	color:#fff;
-	background-color: red;
-	width: 10px;
-	height: 12px;
-	border-radius: 50%;
-	font-size: 7px;
+.cart-total {
 	position: absolute;
+	top: 0;
 	z-index: 2;
-
+	font-size: 0.5em;
+	background-color: white;
+	border-radius: 50%;
+	height: 10px;
+	width: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
+.noLink{
+	color:black;
+	text-decoration:none;
+}
+.noLink:visited{
+	color:black;
+	text-decoration:none;
+}
+
+.col-lg-4,
+.col-lg-6,
+.col-lg-8,
+.col-lg-12 {
 	margin-top: 10px;
 }
 
-.btn{
+.btn {
 	border-radius: 0;
 }
 
-.row-image{
+.row-image {
 	width: 100px;
 }
 
-.form-field{
-	width:250px;
+.form-field {
+	width: 250px;
 	display: inline-block;
 	padding: 5px;
 }
 
-.cart-row{
+.cart-row {
 	display: flex;
-    align-items: flex-stretch;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-    border-bottom: 1px solid #ececec;
+	align-items: flex-stretch;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #ececec;
 
 }
 
-.quantity{
+.quantity {
 	display: inline-block;
 	font-weight: 700;
-	padding-right:10px;
+	padding-right: 10px;
 
 
 }
 
-.chg-quantity{
+.chg-quantity {
 	width: 12px;
 	cursor: pointer;
 	display: block;
 	margin-top: 5px;
-	transition:.1s;
+	transition: .1s;
 }
 
-.chg-quantity:hover{
+.chg-quantity:hover {
 	opacity: .6;
 }
 
 
-.hidden{
-	display: none!important;
+.hidden {
+	display: none !important;
 }
 
-.logo{
+.logo {
 	width: 60px;
 	display: inline-block;
 	margin-left: 0px;
+	height: 50px;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
+	background-color: #f1f1f1;
+	padding: 30px;
+	text-align: center;
+	font-size: 35px;
 }
 
 /* Create three equal columns that floats next to each other */
 .column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  height: 400px; /* Should be removed. Only for demonstration */
+	float: left;
+	width: 33.33%;
+	padding: 10px;
+	height: 400px;
+	/* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
 .row:after {
-  content: "";
-  display: table;
-  clear: both;
+	content: "";
+	display: table;
+	clear: both;
 }
 
 /* Style the footer */
 .footer {
-  background-color: #f1f1f1;
-  padding: 10px;
-  text-align: center;
+	background-color: #f1f1f1;
+	padding: 10px;
+	text-align: center;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other  */
 
 @media (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
+	.column {
+		width: 100%;
+	}
 }
